# Thesis

./: .gitignore  pyproject.toml
data/: pubmed-timeline.csv
pgembed/: .gitignore  environment.yml
pgembed/datasets/: .gitignore
pgembed/datasets/e_coli/: data_summary.tsv  dataset_catalog.json
pgembed/docker/: Identification.Dockerfile
pgembed/pgembed/: embedder.py  main.py  util.py
pgembed/pgembed/identification/: __init__.py  base.py  prodigal.py
pgembed/pgembed/model/: graph.py  sequence.py
pgembed/pgembed/tests/identification/: test_prodigal.py
scripts/: common.py  literature_review.py
